# international_bot

./: .gitignore  Cargo.toml  README.md  codecov.yml
.github/: FUNDING.yml  codecov.yml
.github/workflows/: bumpVersion  bumpVersion.yml  release.yml  rust.yml  workflow.yml
src/: caseless_properties.rs  configuration_manager.rs  main.rs  repoversion.rs
src/chat/: TrovoUserRoles.rs
src/web/v2_Anna/: index.html
web/phantombot/resources/web/: index.html
web/phantombot/resources/web/common/js/jquery-ui/: jquery-ui.theme.min.css
web/phantombot/resources/web/common/js/jquery-ui/jquery-ui/: jquery-ui.min.css
web/phantombot/resources/web/panel/vendors/PACE/: pace.coffee  pace.min.js
