[package]
name = "international_bot"
version = "0.1.0"
authors = ["[SC]thoser666[TeEm] <thoser666@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rocket = "0.4.7"
actix-web = "3"
actix-files = "0.5.0"
actix-session = "0.4.1"
actix-utils = "3.0.0"
env_logger = "0.8.4"
sentry = "0.21.0"