[package]
name = "international_bot"
version = "0.1.0"
authors = ["[SC]thoser666[TeEm] <thoser666@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
actix-files = "0.6.0-beta.6"          # 0.5.0 wirft v_escape-Bug
actix-session = "0.5.0-beta.2"
actix-utils = "3.0.0"
env_logger = "0.8.4"
sentry = "0.23.0"